[package]
name = "love-ultralight"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.11.1", features = ["luajit", "module"] }
ul-next = { version = "0.5.4", path = "ul_next" }
cli-clipboard = "0.4.0"
once_cell = "1.21.3"
phf = "0.12.1"
phf_macros = "0.12.1"
